<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>solutions.own.instructor4j</groupId>
    <artifactId>instructor4j-examples</artifactId>
    <version>2.0.0</version>
    <packaging>pom</packaging>
    <name>Instructor4j :: Examples</name>

    <dependencies>
        <!-- Instructor4j -->
        <dependency>
            <groupId>solutions.own.instructor4j</groupId>
            <artifactId>instructor4j-openai</artifactId>
            <version>2.0.0</version>
        </dependency>

        <!-- Hibernate Validator (Implementation of Bean Validation API) -->
        <dependency>
            <groupId>org.hibernate.validator</groupId>
            <artifactId>hibernate-validator</artifactId>
            <version>8.0.1.Final</version>
        </dependency>

        <!-- Optional: For using Java 8 Date and Time API -->
        <dependency>
            <groupId>org.hibernate.validator</groupId>
            <artifactId>hibernate-validator-annotation-processor</artifactId>
            <version>8.0.1.Final</version>
        </dependency>

        <!-- Reactor for Flux and Mono -->
        <dependency>
            <groupId>io.projectreactor</groupId>
            <artifactId>reactor-core</artifactId>
            <version>3.7.1</version> <!-- Use the latest stable version -->
        </dependency>

        <!-- Jackson for JSON Parsing -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.18.2</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>8</source>
                    <target>8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>